feat(部署识别): 标记Main位置并生成连接说明